shalinee | correct alignment of icon

--- a/apps/web-giddh/src/app/shared/header/components/aside-setting/aside-setting.component.scss
+++ b/apps/web-giddh/src/app/shared/header/components/aside-setting/aside-setting.component.scss
@@ -136,6 +136,7 @@
                             -webkit-box-align: center;
                             align-items: center;
                             width: 28px;
+                            float: left;
                         }
                         &:last-child{
                             float: left;
